# goit-ds-hw-03

./: pyproject.toml
mod_3_part_1/: main_mongo.py
mod_3_part_2/: authors.json  main.py
