[project]
name = "goit-ds-hw-03"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrii-Rublov",email = "rublyovandrew@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "pymongo (>=4.11,<5.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "scrapy (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
